force-app/main/default/objects/Resource_Request__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>EMS_TM_Project__c</referenceTo>
    <relationshipLabel>Resource Requests</relationshipLabel>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>