force-app/main/default/objects/Resource_Request__c/fields/Request_Priority__c.field-meta.xml
<CustomField>
    <fullName>Request_Priority__c</fullName>
    <label>Request Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Very High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>