force-app/main/default/objects/Resource_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resource Requests</relationshipLabel>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>