force-app/main/default/objects/Resource_Request__c/fields/Resource_Role1__c.field-meta.xml
<CustomField>
    <fullName>Resource_Role1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Role</label>
    <referenceTo>Resource_Role__c</referenceTo>
    <relationshipLabel>Resource Requests</relationshipLabel>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>