force-app/main/default/objects/Resource_Request__c/fields/Resource_Skills__c.field-meta.xml
<CustomField>
    <fullName>Resource_Skills__c</fullName>
    <description>This formula shows the Skills related to the Resource Role Selected while creating Resource Request</description>
    <formula>Resource_Role1__r.Skills__c</formula>
    <inlineHelpText>Skills of the selected Resource Role</inlineHelpText>
    <label>Resource Skills</label>
    <type>Text</type>
</CustomField>