force-app/main/default/objects/Resource_Request__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Optional Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Resource Requests</relationshipLabel>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>