force-app/main/default/objects/Resource_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resource_Role1__c</columns>
    <columns>Request_Priority__c</columns>
    <columns>Skills__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>